feat: remove scrollToTop method and related calls in FollowingComponent for cleaner code

--- a/src/app/pages/profile/following/following.component.html
+++ b/src/app/pages/profile/following/following.component.html
@@ -35,7 +35,7 @@
           <div class="error-container">
             <mat-icon>error</mat-icon>
             <p>{{ error() }}</p>
-            <button mat-button color="primary" (click)="scrollToTop()">
+            <button mat-button color="primary">
               <mat-icon>refresh</mat-icon> Try Again
             </button>
           </div>
