--- a/src/app/pages/profile/following/following.component.scss
+++ b/src/app/pages/profile/following/following.component.scss
@@ -73,11 +73,11 @@
   flex-grow: 1;
 }
 
-.following-content {
-  flex: 1;
-  padding: 16px;
-  overflow-y: auto;
-}
+// .following-content {
+//   flex: 1;
+//   padding: 16px;
+//   overflow-y: auto;
+// }
 
 .following-title {
   font-size: 20px;
@@ -154,4 +154,27 @@
   p {
     margin: 8px 0 0;
   }
+}
+
+.mat-mdc-tab-header {
+  /** A hack needed to move the tabs up to the header. */
+  position: initial !important;
+  background-color: var(--mat-sidenav-content-background-color, var(--mat-sys-background));
+}
+
+.following-tab {
+  background-color: red !important;
+  position: initial !important;
+}
+
+.mat-mdc-tab-labels {
+  background-color: red !important;
+}
+
+mat-tab-group {
+  background-color: green !important;
+}
+
+mat-tab-header {
+  background-color: yellow !important
 }
