--- a/src/app/pages/profile/following/following.component.scss
+++ b/src/app/pages/profile/following/following.component.scss
@@ -18,6 +18,7 @@
   top: 0;
   z-index: 3;
   background-color: var(--mat-sidenav-content-background-color, var(--mat-sys-background));
+  margin-bottom: 0; /* Ensure no margin at bottom */
 }
 
 .back-button {
@@ -66,12 +67,14 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  margin-top: 0; /* Ensure no margin at top */
   
   ::ng-deep .mat-mdc-tab-header {
     position: sticky;
-    top: 73px; // Height of header including padding
+    top: 72px; /* Adjust to exactly match the header height */
     z-index: 2;
     background-color: var(--mat-sidenav-content-background-color, var(--mat-sys-background));
+    border-top: none; /* Remove any potential border */
   }
   
   ::ng-deep .mat-mdc-tab-body-wrapper {
