feat: update login dialog input placeholder for Nostr Connect URL

--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -152,7 +152,7 @@
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>Nostr Connect URL</mat-label>
-      <input matInput [(ngModel)]="nostrConnectUrl" placeholder="nostr+..." [disabled]="nostrConnectLoading()"
+      <input matInput [(ngModel)]="nostrConnectUrl" placeholder="bunker://..." [disabled]="nostrConnectLoading()"
         autocomplete="off" autocorrect="off" spellcheck="false">
       <mat-hint>Scan QR code from Nostria Signer app to get this URL</mat-hint>
     </mat-form-field>
