feat: add QR code generation and scanning functionality with ZXing integration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
     <!-- <zxing-scanner [start]="true" (scanSuccess)="qrScan($event)"> </zxing-scanner> -->
 
     <!-- <button mat-icon-button (click)="qrScan()"> -->
-    <button mat-icon-button>
+    <button mat-icon-button (click)="qrScan()">
       <mat-icon>qr_code_scanner</mat-icon>
     </button>
     }
