--- a/src/app/components/qrcode-scan-dialog/qrcode-scan-dialog.component.scss
+++ b/src/app/components/qrcode-scan-dialog/qrcode-scan-dialog.component.scss
@@ -1,7 +1,22 @@
-// .qr-scanner {
-//   width: 80%;
-//   height: 80%;
-// }
+.qr-scanner {
+  width: 100%;
+  min-height: 300px;
+}
+
+.camera-controls {
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+
+.camera-info {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.7);
+  margin-top: 8px;
+  text-align: center;
+}
 
 :host {
   width: 100vw;
@@ -9,11 +24,5 @@
 }
 
 :host zxing-scanner::ng-deep {
-  //   max-height: 70vh;
-  //   width: 100vw;
   object-fit: contain;
 }
-
-// mat-dialog-content {
-//   width: 100vw;
-// }
