--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -113,18 +113,18 @@
     <p class="dialog-subtitle">Select an account to continue:</p>
 
     <mat-nav-list class="accounts-list">
-      @for (account of nostrService.accountsMetadata(); track account) {
+      @for (account of nostrService.allAccounts(); track account.pubkey) {
       <a mat-list-item (click)="selectExistingAccount(account.pubkey)" class="account-item">
-        @if (account.content.picture) {
+        @if (account.metadata?.content?.picture) {
         <div class="account-avatar" matListItemIcon>
-          <img [src]="account.content.picture" alt="Profile picture" class="avatar-image">
+          <img [src]="account.metadata.content.picture" alt="Profile picture" class="avatar-image">
         </div>
         } @else {
         <mat-icon matListItemIcon>account_circle</mat-icon>
         }
-        <span matListItemTitle>{{ account.content.name }}</span>
+        <span matListItemTitle>{{ account.metadata?.content?.name || 'Unknown User' }}</span>
         <span matListItemLine class="account-source">{{ nostrService.getTruncatedNpub(account.pubkey) }}<br>Last used:
-          {{ account.created_at| date:'short' }}
+          {{ account.lastUsed | date:'short' }}
         </span>
         <button mat-icon-button class="delete-button" (click)="removeAccount($event, account.pubkey)"
           matTooltip="Remove account">
